fixing layout issue

--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -264,6 +264,8 @@
              <tr>
                <td class="spacing-top border-top left-column mWidth">
                  <img src="http://placehold.it/195x195" width="195" height="195" alt="Placeholder image" align="left" class="mFullImage">
+               </td>
+               <td class="spacing-top border-top left-column mWidth">
                  <table align="right" border="0" cellpadding="0" cellspacing="0" class="mWidth" width="160">
                    <tr>
                      <td class="mWidth">
@@ -277,6 +279,8 @@
              <tr>
                <td class="spacing-top border-top left-column mWidth">
                  <img src="http://placehold.it/195x195" width="195" height="195" alt="Placeholder image" align="left" class="mFullImage">
+               </td>
+               <td class="spacing-top border-top left-column mWidth">
                  <table align="right" border="0" cellpadding="0" cellspacing="0" class="mWidth" width="160">
                    <tr>
                      <td class="mWidth">
@@ -402,6 +406,8 @@
             <tr>
               <td class="spacing-top right-column mWidth">
                 <img src="http://placehold.it/75x75" align="right" width="75" height="75" alt="Placeholder image" class="spacing-top mFullImage">
+              </td>
+              <td class="spacing-top mWidth">
                 <table cellpadding="0" cellspacing="0" border="0" class="mWidth" align="left" width="140">
                   <tr>
                     <td class="mWidth">
@@ -425,6 +431,8 @@
             <tr>
               <td class="spacing-top right-column mWidth">
                 <img src="http://placehold.it/75x75" align="right" width="75" height="75" alt="Placeholder image" class="spacing-top mFullImage">
+              </td>
+              <td class="spacing-top mWidth">  
                 <table cellpadding="0" cellspacing="0" border="0" class="mWidth" align="left" width="140">
                   <tr>
                     <td class="mWidth">
@@ -466,7 +474,7 @@
       <!-- END TWO COLUMNS -->
 
       <!-- FULL COLUMN 50/50 -->
-      <tr>
+      <!--<tr>
         <td class="section-title mWidth">
           <h2>FULL COLUMN 50/50</h2>
         </td>
@@ -483,7 +491,7 @@
             </tr>
           </table>
         </td>
-      </tr>
+      </tr> -->
       <!-- END FULL COLUMN 50/50 -->
 
   	</table>
