adjusting padding styles

--- a/source/_assets/stylesheets/_layout.scss
+++ b/source/_assets/stylesheets/_layout.scss
@@ -46,12 +46,13 @@
 	padding-top: 10px;
 }
 
-.spacing {
-	padding: 5px 0;
+.spacing-top-bottom {
+	padding-top: 5px;
+	padding-bottom: 5px;
 }
 
 .spacing-bottom {
-	padding: 0 0 15px;
+	padding-bottom: 15px;
 }
 
 .spacing-left {
