--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -262,33 +262,33 @@
                </td>
              </tr>
              <tr>
-               <td class="spacing-top border-top left-column mWidth">
-                 <img src="http://placehold.it/195x195" width="195" height="195" alt="Placeholder image" align="left" class="mFullImage">
-               </td>
-               <td class="spacing-top border-top left-column mWidth">
-                 <table align="right" border="0" cellpadding="0" cellspacing="0" class="mWidth" width="160">
-                   <tr>
-                     <td class="mWidth">
-                      <h3><a href="#">Neque porro quisquam est qui dolorem ipsum quia</a></h3>
+               <td class="left-column spacing-top border-top mWidth">
+               <table border="0" cellpadding="0" cellspacing="0" class="mWidth">
+                <tr>
+                  <td class="mWidth" width="180" valign="top">
+                    <img src="http://placehold.it/180x180" width="180" height="180" alt="Placeholder image" align="left" class="mFullImage">
+                  </td>
+                  <td class="spacing-left mWidth" width="180">
+                    <h3><a href="#">Neque porro quisquam est qui dolorem ipsum quia</a></h3>
                       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                      </td>
-                   </tr>
-                 </table>
+                  </td>
+                </tr>
+               </table>
                </td>
              </tr>
-             <tr>
-               <td class="spacing-top border-top left-column mWidth">
-                 <img src="http://placehold.it/195x195" width="195" height="195" alt="Placeholder image" align="left" class="mFullImage">
-               </td>
-               <td class="spacing-top border-top left-column mWidth">
-                 <table align="right" border="0" cellpadding="0" cellspacing="0" class="mWidth" width="160">
-                   <tr>
-                     <td class="mWidth">
-                      <h3><a href="#">Neque porro quisquam est qui dolorem ipsum quia</a></h3>
+              <tr>
+               <td class="left-column spacing-top border-top mWidth">
+               <table border="0" cellpadding="0" cellspacing="0" class="mWidth">
+                <tr>
+                  <td class="mWidth" width="180" valign="top">
+                    <img src="http://placehold.it/180x180" width="180" height="180" alt="Placeholder image" align="left" class="mFullImage">
+                  </td>
+                  <td class="spacing-left mWidth" width="180">
+                    <h3><a href="#">Neque porro quisquam est qui dolorem ipsum quia</a></h3>
                       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                      </td>
-                   </tr>
-                 </table>
+                  </td>
+                </tr>
+               </table>
                </td>
              </tr>
              <tr>
@@ -316,7 +316,7 @@
               </td>
             </tr>
             <tr>
-              <td class="spacing right-column mWidth">
+              <td class="spacing-top-bottom right-column mWidth">
                 <strong>Date:</strong> dd/mm/yyyy
               </td>
             </tr>
@@ -346,7 +346,7 @@
               </td>
             </tr>
             <tr>
-              <td class="spacing right-column mWidth">
+              <td class="spacing-top-bottom right-column mWidth">
                 <strong>Date:</strong> dd/mm/yyyy
               </td>
             </tr>
@@ -361,7 +361,7 @@
               </td>
             </tr>
             <tr>
-              <td class="spacing right-column mWidth">
+              <td class="spacing-top-bottom right-column mWidth">
                 <strong>Date:</strong> dd/mm/yyyy
               </td>
             </tr>
@@ -376,7 +376,7 @@
               </td>
             </tr>
             <tr>
-              <td class="spacing right-column mWidth">
+              <td class="spacing-top-bottom right-column mWidth">
                 <strong>Date:</strong> dd/mm/yyyy
               </td>
             </tr>
@@ -406,16 +406,8 @@
             <tr>
               <td class="spacing-top right-column mWidth">
                 <img src="http://placehold.it/75x75" align="right" width="75" height="75" alt="Placeholder image" class="spacing-top mFullImage">
-              </td>
-              <td class="spacing-top mWidth">
-                <table cellpadding="0" cellspacing="0" border="0" class="mWidth" align="left" width="140">
-                  <tr>
-                    <td class="mWidth">
-                      <p class="event-title"><a href="#">Neque porro quisquam est qui dolorem ipsum quia</a></p>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                    </td>
-                  </tr>
-                </table>
+                <p class="event-title"><a href="#">Neque porro quisquam est qui dolorem ipsum quia</a></p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
               </td>
             </tr>
             <tr>
@@ -431,16 +423,8 @@
             <tr>
               <td class="spacing-top right-column mWidth">
                 <img src="http://placehold.it/75x75" align="right" width="75" height="75" alt="Placeholder image" class="spacing-top mFullImage">
-              </td>
-              <td class="spacing-top mWidth">  
-                <table cellpadding="0" cellspacing="0" border="0" class="mWidth" align="left" width="140">
-                  <tr>
-                    <td class="mWidth">
-                      <p class="event-title"><a href="#">Neque porro quisquam est qui dolorem ipsum quia</a></p>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                    </td>
-                  </tr>
-                </table>
+                <p class="event-title"><a href="#">Neque porro quisquam est qui dolorem ipsum quia</a></p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
               </td>
             </tr>
             <!-- End text and photo -->
@@ -474,7 +458,7 @@
       <!-- END TWO COLUMNS -->
 
       <!-- FULL COLUMN 50/50 -->
-      <!--<tr>
+      <tr>
         <td class="section-title mWidth">
           <h2>FULL COLUMN 50/50</h2>
         </td>
@@ -491,7 +475,7 @@
             </tr>
           </table>
         </td>
-      </tr> -->
+      </tr>
       <!-- END FULL COLUMN 50/50 -->
 
   	</table>
