--- a/source/_assets/stylesheets/_typography.scss
+++ b/source/_assets/stylesheets/_typography.scss
@@ -54,7 +54,8 @@ p {
 	border-bottom: 2px solid $brand-gold;
 	color: $brand-gold;
 	margin: 0;
-	padding: 15px 15px 5px;
+	padding: 20px 15px 5px;
+	text-transform: uppercase;
 }
 
 .sub-section-title {
