--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -485,23 +485,22 @@
       </tr>
       <!-- END FULL COLUMN 50/50 -->
 
-      <tr>
-        <td class="mWidth border-top">
-          &nbsp;
-        </td>
-      </tr>
-      
       <!-- THREE COLUMNS -->
       <tr>
-        <td class="section-content spacing-top mWidth">
+        <td class="section-title mWidth">
+          <h2>THREE COLUMNS</h2>
+        </td>
+      </tr>
+      <tr>
+        <td class="section-content mWidth">
           <table align="left" border="0" cellpadding="0" cellspacing="0" class="mWidth" width="193">
             <tr>
-              <td class="spacing-right mWidth">
+              <td class="large-spacing-right mWidth">
                 <img src="http://placehold.it/193x193" align="left" width="193" height="193" alt="Placeholder image" class="mFullImage">
               </td>
             </tr>
             <tr>
-              <td class="spacing-right mWidth">
+              <td class="large-spacing-right mWidth">
                 <h3><a href="#">Neque porro quisquam est qui dolorem ipsum quia</a></h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec placerat elit ac felis faucibus, ac ullamcorper diam semper. Cras non sapien sapien.</p>
               </td>
@@ -537,13 +536,18 @@
       </tr>
       <!-- END THREE COLUMNS -->
       <tr>
-        <td class="mWidth border-top">
+        <td class="spacing-top mWidth">
           &nbsp;
         </td>
       </tr>
       <!-- TWO COLUMNS VERTICAL -->
+       <tr>
+        <td class="section-title mWidth">
+          <h2>Vertical 50/50 COLUMNS</h2>
+        </td>
+      </tr>
       <tr>
-        <td class="section-content spacing-top mWidth" width="305">
+        <td class="section-content mWidth" width="305">
           <table align="left" cellpadding="0" cellspacing="0" class="mWidth" width="300">
             <tr>
               <td valign="top">
@@ -569,6 +573,15 @@
         </td>
       </tr>
       <!-- END TWO COLUMNS VERTICAL -->
+
+      <!-- FULL COLUMN TEXT CENTER -->
+      <tr>
+        <td align="center" class="mWidth">
+          <h3><a href="#">Neque porro quisquam est qui dolorem ipsum quia</a></h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel.</p>
+        </td>
+      </tr>
+      <!-- END FULL COLUMN TEXT CENTER -->
   	</table>
   </body>
 
