--- a/source/_assets/stylesheets/_layout.scss
+++ b/source/_assets/stylesheets/_layout.scss
@@ -55,6 +55,13 @@
 	text-align: right;
 }
 
+.separator-bottom {
+	border-bottom: 1px solid $brand-blue;
+	font-weight: 500;
+	padding: 5px 0;
+	text-align: right;
+}
+
 .border-top {
 	border-top: 1px solid $brand-blue;
 }
