--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -573,7 +573,11 @@
         </td>
       </tr>
       <!-- END TWO COLUMNS VERTICAL -->
-
+      <tr>
+        <td class="separator">
+          &nbsp;
+        </td>
+      </tr>
       <!-- FULL COLUMN TEXT CENTER -->
       <tr>
         <td align="center" class="mWidth">
@@ -582,6 +586,11 @@
         </td>
       </tr>
       <!-- END FULL COLUMN TEXT CENTER -->
+      <tr>
+        <td class="separator-bottom">
+          &nbsp;
+        </td>
+      </tr>
   	</table>
   </body>
 
