changing separator-bottom padding

--- a/source/_assets/stylesheets/_layout.scss
+++ b/source/_assets/stylesheets/_layout.scss
@@ -58,7 +58,7 @@
 .separator-bottom {
 	border-bottom: 1px solid $brand-blue;
 	font-weight: 500;
-	padding: 5px 0;
+	padding: 0 0 5px;
 	text-align: right;
 }
 
