--- a/source/_assets/stylesheets/_base.scss
+++ b/source/_assets/stylesheets/_base.scss
@@ -29,6 +29,10 @@ a:hover {
 	text-decoration: underline;
 }
 
+p {
+	padding: 10px 0;
+}
+
 .spacing-top {
 	padding-bottom: 5px;
 	padding-top: 10px;
