changing separator-bottom to top

--- a/source/_assets/stylesheets/_layout.scss
+++ b/source/_assets/stylesheets/_layout.scss
@@ -55,8 +55,8 @@
 	text-align: right;
 }
 
-.separator-bottom {
-	border-bottom: 1px solid $brand-blue;
+.separator-top {
+	border-top: 1px solid $brand-blue;
 	font-weight: 500;
 	padding: 0 0 5px;
 	text-align: right;
