--- a/source/_assets/stylesheets/_layout.scss
+++ b/source/_assets/stylesheets/_layout.scss
@@ -55,7 +55,7 @@
 	text-align: right;
 }
 
-.separator-top {
+.separator-bottom {
 	border-top: 1px solid $brand-blue;
 	font-weight: 500;
 	padding: 0 0 5px;
