--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -591,6 +591,13 @@
           &nbsp;
         </td>
       </tr>
+      <!-- YEAH THE FOOTER IS THE END OF THIS EMAIL -->
+      <tr>
+        <td align="center" class="footer-title">
+          FOLLOW US
+        </td>
+      </tr>
+      <!-- YUP! FIN -->
   	</table>
   </body>
 
