remove bg footer-title

--- a/source/_assets/stylesheets/_typography.scss
+++ b/source/_assets/stylesheets/_typography.scss
@@ -70,9 +70,8 @@ p {
 }
 
 .footer-title {
-	background: $brand-blue;
 	border-bottom: 1px $brand-blue dotted;
-	color: $brand-gold;
+	color: $brand-blue;
 	padding: 10px 15px;
 	width: 640px;
 	text-transform: uppercase;
