footer style change

--- a/source/_assets/stylesheets/_layout.scss
+++ b/source/_assets/stylesheets/_layout.scss
@@ -66,3 +66,11 @@
 	border-top: 1px solid $brand-blue;
 }
 
+.footer-title {
+	border-bottom: 1px $brand-blue dotted;
+	color: $brand-blue;
+	padding: 10px 15px;
+	width: 640px;
+	text-transform: uppercase;
+}
+
