--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -586,15 +586,10 @@
         </td>
       </tr>
       <!-- END FULL COLUMN TEXT CENTER -->
-      <tr>
-        <td class="separator-bottom">
-          &nbsp;
-        </td>
-      </tr>
       <!-- YEAH THE FOOTER IS THE END OF THIS EMAIL -->
       <tr>
         <td align="center" class="footer-title">
-          FOLLOW US
+          <h3>FOLLOW US</h3>
         </td>
       </tr>
       <!-- YUP! FIN -->
