footer title change

--- a/source/_assets/stylesheets/_layout.scss
+++ b/source/_assets/stylesheets/_layout.scss
@@ -69,7 +69,7 @@
 .footer-title {
 	border-bottom: 1px $brand-blue dotted;
 	color: $brand-blue;
-	padding: 10px 15px;
+	padding: 10px 0;
 	width: 640px;
 	text-transform: uppercase;
 }
