--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -588,8 +588,21 @@
       <!-- END FULL COLUMN TEXT CENTER -->
       <!-- YEAH THE FOOTER IS THE END OF THIS EMAIL -->
       <tr>
-        <td align="center" class="footer-title">
-          <h3>FOLLOW US</h3>
+        <td align="center" class="mWidth">
+          <table align="center" border="0" cellpadding="0" cellspacing="0" width="320">
+          <tr>
+              <td colspan="5" class="footer-title">
+              <h3>FOLLOW US</h3>
+              </td>
+            </tr>
+            <tr>
+              <td><a href="https://www.facebook.com/ucsantacruz"><img src="https://adminlb.imodules.com/s/1069/images/editor/mobile-placeholder-images/facebook-micon.png" alt="Facebook" border="0"></a></td>
+              <td><a href="https://www.facebook.com/ucsantacruz"><img src="https://adminlb.imodules.com/s/1069/images/editor/mobile-placeholder-images/facebook-micon.png" alt="Facebook" border="0"></a></td>
+              <td><a href="https://www.facebook.com/ucsantacruz"><img src="https://adminlb.imodules.com/s/1069/images/editor/mobile-placeholder-images/facebook-micon.png" alt="Facebook" border="0"></a></td>
+              <td><a href="https://www.facebook.com/ucsantacruz"><img src="https://adminlb.imodules.com/s/1069/images/editor/mobile-placeholder-images/facebook-micon.png" alt="Facebook" border="0"></a></td>
+              <td><a href="https://www.facebook.com/ucsantacruz"><img src="https://adminlb.imodules.com/s/1069/images/editor/mobile-placeholder-images/facebook-micon.png" alt="Facebook" border="0"></a></td>
+            </tr>
+          </table>
         </td>
       </tr>
       <!-- YUP! FIN -->
