--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -589,9 +589,11 @@
       <!-- YEAH THE FOOTER IS THE END OF THIS EMAIL -->
       <tr>
         <td>
-          <table align="center" cellpadding="0" cellspacing="0" width="320" class="footer-title">
+          <table align="center" cellpadding="0" cellspacing="0" width="320">
             <tr>
-              <td colspan="5"></td>
+              <td colspan="5" class="footer-title">
+                <h3>FOLLOW US</h3>
+              </td>
             </tr>
             <tr>
               <td><a href="https://www.facebook.com/ucsantacruz"><img src="https://adminlb.imodules.com/s/1069/images/editor/mobile-placeholder-images/facebook-micon.png" alt="Facebook" border="0"></a></td>
