--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -553,7 +553,7 @@
               <td valign="top">
                 <img src="http://placehold.it/95x140" align="left" width="95" height="140" alt="Placeholder image" class="spacing-right">
               </td>
-              <td class="large-spacing-right mWidth" valign="top">
+              <td class="large-spacing-right spacing-top mWidth" valign="top">
                 <h3><a href="#">Neque porro quisquam est qui dolorem ipsum quia</a></h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel. </p>
               </td>
@@ -564,7 +564,7 @@
               <td class="large-spacing-left" valign="top">
                 <img src="http://placehold.it/95x140" align="left" width="95" height="140" alt="Placeholder image" class="spacing-right">
               </td>
-              <td class="mWidth" valign="top">
+              <td class="spacing-top mWidth" valign="top">
                 <h3><a href="#">Neque porro quisquam est qui dolorem ipsum quia</a></h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel.</p>
               </td>
@@ -588,19 +588,19 @@
       <!-- END FULL COLUMN TEXT CENTER -->
       <!-- YEAH THE FOOTER IS THE END OF THIS EMAIL -->
       <tr>
-        <td>
-          <table align="center" cellpadding="0" cellspacing="0" width="320">
+        <td class="spacing-top">
+          <table align="center" cellpadding="0" cellspacing="0" width="300">
             <tr>
-              <td colspan="5" class="footer-title">
+              <td align="center" colspan="5" class="footer-title">
                 <h3>FOLLOW US</h3>
               </td>
             </tr>
             <tr>
-              <td><a href="https://www.facebook.com/ucsantacruz"><img src="https://adminlb.imodules.com/s/1069/images/editor/mobile-placeholder-images/facebook-micon.png" alt="Facebook" border="0"></a></td>
-              <td><a href="https://www.facebook.com/ucsantacruz"><img src="https://adminlb.imodules.com/s/1069/images/editor/mobile-placeholder-images/facebook-micon.png" alt="Facebook" border="0"></a></td>
-              <td><a href="https://www.facebook.com/ucsantacruz"><img src="https://adminlb.imodules.com/s/1069/images/editor/mobile-placeholder-images/facebook-micon.png" alt="Facebook" border="0"></a></td>
-              <td><a href="https://www.facebook.com/ucsantacruz"><img src="https://adminlb.imodules.com/s/1069/images/editor/mobile-placeholder-images/facebook-micon.png" alt="Facebook" border="0"></a></td>
-              <td><a href="https://www.facebook.com/ucsantacruz"><img src="https://adminlb.imodules.com/s/1069/images/editor/mobile-placeholder-images/facebook-micon.png" alt="Facebook" border="0"></a></td>
+              <td align="center" class="spacing-top"><a href="https://www.facebook.com/ucsantacruz"><img src="https://adminlb.imodules.com/s/1069/images/editor/mobile-placeholder-images/facebook-micon.png" alt="Facebook" border="0"></a></td>
+              <td align="center" class="spacing-top"><a href="https://www.facebook.com/ucsantacruz"><img src="https://adminlb.imodules.com/s/1069/images/editor/mobile-placeholder-images/twitter-micon.png" alt="Twitter" border="0"></a></td>
+              <td align="center" class="spacing-top"><a href="https://www.facebook.com/ucsantacruz"><img src="https://adminlb.imodules.com/s/1069/images/editor/mobile-placeholder-images/instragram-micon.png" alt="Instagram" border="0"></a></td>
+              <td align="center" class="spacing-top"><a href="https://www.facebook.com/ucsantacruz"><img src="https://adminlb.imodules.com/s/1069/images/editor/mobile-placeholder-images/youtube-micon.png" alt="Youtube" border="0"></a></td>
+              <td align="center" class="spacing-top"><a href="https://www.facebook.com/ucsantacruz"><img src="https://adminlb.imodules.com/s/1069/images/editor/mobile-placeholder-images/facebook-micon.png" alt="Facebook" border="0"></a></td>
             </tr>
           </table>
         </td>
