--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -586,6 +586,13 @@
         </td>
       </tr>
       <!-- END FULL COLUMN TEXT CENTER -->
+      <!-- CAMPAIGN -->
+      <tr>
+        <td align="center" class="mWidth">
+          <a href="http://campaign.ucsc.edu"><img src="https://adminlb.imodules.com/s/1069/images/editor/mobile-placeholder-images/campaign-ucsc.png" alt="The Campaign for UC Santa Cruz"></a>
+        </td>
+      </tr>
+      <!-- END CAMPAIGN -->
       <!-- YEAH THE FOOTER IS THE END OF THIS EMAIL -->
       <tr>
         <td class="spacing-top">
@@ -597,15 +604,20 @@
             </tr>
             <tr>
               <td align="center" class="spacing-top"><a href="https://www.facebook.com/ucsantacruz"><img src="https://adminlb.imodules.com/s/1069/images/editor/mobile-placeholder-images/facebook-micon.png" alt="Facebook" border="0"></a></td>
-              <td align="center" class="spacing-top"><a href="https://www.facebook.com/ucsantacruz"><img src="https://adminlb.imodules.com/s/1069/images/editor/mobile-placeholder-images/twitter-micon.png" alt="Twitter" border="0"></a></td>
-              <td align="center" class="spacing-top"><a href="https://www.facebook.com/ucsantacruz"><img src="https://adminlb.imodules.com/s/1069/images/editor/mobile-placeholder-images/instragram-micon.png" alt="Instagram" border="0"></a></td>
-              <td align="center" class="spacing-top"><a href="https://www.facebook.com/ucsantacruz"><img src="https://adminlb.imodules.com/s/1069/images/editor/mobile-placeholder-images/youtube-micon.png" alt="Youtube" border="0"></a></td>
+              <td align="center" class="spacing-top"><a href="https://twitter.com/ucsc"><img src="https://adminlb.imodules.com/s/1069/images/editor/mobile-placeholder-images/twitter-micon.png" alt="Twitter" border="0"></a></td>
+              <td align="center" class="spacing-top"><a href="https://www.instagram.com/ucsc"><img src="https://adminlb.imodules.com/s/1069/images/editor/mobile-placeholder-images/instragram-micon.png" alt="Instagram" border="0"></a></td>
+              <td align="center" class="spacing-top"><a href="https://www.youtube.com/user/UCSantaCruz"><img src="https://adminlb.imodules.com/s/1069/images/editor/mobile-placeholder-images/youtube-micon.png" alt="Youtube" border="0"></a></td>
               <td align="center" class="spacing-top"><a href="https://www.facebook.com/ucsantacruz"><img src="https://adminlb.imodules.com/s/1069/images/editor/mobile-placeholder-images/facebook-micon.png" alt="Facebook" border="0"></a></td>
             </tr>
           </table>
         </td>
       </tr>
       <!-- YUP! FIN -->
+      <tr>
+        <td class="end-border spacing-top">
+          &nbsp;
+        </td>
+      </tr>
   	</table>
   </body>
 
