--- a/source/_assets/stylesheets/_layout.scss
+++ b/source/_assets/stylesheets/_layout.scss
@@ -67,10 +67,13 @@
 }
 
 .footer-title {
-	border-bottom: 1px $brand-blue dotted;
 	color: $brand-blue;
 	padding: 10px 0;
 	text-transform: uppercase;
+}
+
+.social-border {
+	border-top: 1px $brand-blue dotted;
 }
 
 .end-border {
