--- a/source/_assets/stylesheets/_layout.scss
+++ b/source/_assets/stylesheets/_layout.scss
@@ -67,7 +67,7 @@
 }
 
 .footer-title {
-	border-top: 1px $brand-blue dotted;
+	border-bottom: 1px $brand-blue dotted;
 	color: $brand-blue;
 	padding: 10px 0;
 	text-transform: uppercase;
