--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -561,7 +561,7 @@
           </table>
           <table align="left" cellpadding="0" cellspacing="0" class="mWidth" width="300">
             <tr>
-              <td class="large-spacing-left" valign="top">
+              <td valign="top">
                 <img src="http://placehold.it/95x140" align="left" width="95" height="140" alt="Placeholder image" class="spacing-right">
               </td>
               <td class="spacing-top mWidth" valign="top">
@@ -580,7 +580,7 @@
       </tr>
       <!-- FULL COLUMN TEXT CENTER -->
       <tr>
-        <td align="center" class="mWidth">
+        <td align="center" class="spacing-top spacing-bottom mWidth">
           <h3><a href="#">Neque porro quisquam est qui dolorem ipsum quia</a></h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel.</p>
         </td>
@@ -589,7 +589,7 @@
       <!-- CAMPAIGN -->
       <tr>
         <td align="center" class="spacing-top spacing-bottom mWidth">
-          <a href="http://campaign.ucsc.edu"><img src="https://adminlb.imodules.com/s/1069/images/editor/mobile-placeholder-images/campaign-ucsc.png" alt="The Campaign for UC Santa Cruz"></a>
+          <a href="http://campaign.ucsc.edu"><img src="https://adminlb.imodules.com/s/1069/images/editor/mobile-placeholder-images/campaign-ucsc.png" alt="The Campaign for UC Santa Cruz" border="0"></a>
         </td>
       </tr>
       <!-- END CAMPAIGN -->
