--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -547,24 +547,24 @@
         </td>
       </tr>
       <tr>
-        <td class="section-content mWidth" width="305">
-          <table align="left" cellpadding="0" cellspacing="0" class="mWidth" width="300">
+        <td class="section-content mWidth" width="610">
+          <table align="left" cellpadding="0" cellspacing="0" width="295" class="mWidth">
             <tr>
-              <td valign="top">
-                <img src="http://placehold.it/95x140" align="left" width="95" height="140" alt="Placeholder image" class="spacing-right">
+              <td class="spacing-right spacing-bottom" valign="top">
+                <img src="http://placehold.it/95x140" align="left" width="95" height="140" alt="Placeholder image">
               </td>
-              <td class="large-spacing-right spacing-top mWidth" valign="top">
+              <td valign="top" class="large-spacing-right">
                 <h3><a href="#">Neque porro quisquam est qui dolorem ipsum quia</a></h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel. </p>
               </td>
             </tr>
           </table>
-          <table align="left" cellpadding="0" cellspacing="0" class="mWidth" width="300">
+          <table align="left" cellpadding="0" cellspacing="0" class="mWidth" width="295">
             <tr>
-              <td valign="top">
-                <img src="http://placehold.it/95x140" align="left" width="95" height="140" alt="Placeholder image" class="spacing-right">
+              <td class="spacing-right spacing-bottom" valign="top">
+                <img src="http://placehold.it/95x140" align="left" width="95" height="140" alt="Placeholder image">
               </td>
-              <td class="spacing-top mWidth" valign="top">
+              <td valign="top">
                 <h3><a href="#">Neque porro quisquam est qui dolorem ipsum quia</a></h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel.</p>
               </td>
