--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -595,7 +595,7 @@
       <!-- END CAMPAIGN -->
       <!-- YEAH THE FOOTER IS THE END OF THIS EMAIL -->
       <tr>
-        <td class="spacing-top">
+        <td class="spacing-top" align="center">
           <table align="center" cellpadding="0" cellspacing="0" width="300">
             <tr>
               <td align="center" colspan="5" class="footer-title">
@@ -603,7 +603,7 @@
               </td>
             </tr>
             <tr>
-              <td>
+              <td align="center">
                 <table align="center" border="0" cellpadding="0" cellspacing="0">
                   <tr>
                     <td align="center" class="spacing-top spacing-right"><a href="https://www.facebook.com/ucsantacruz"><img src="https://adminlb.imodules.com/s/1069/images/editor/mobile-placeholder-images/facebook-micon.png" alt="Facebook" border="0"></a></td>
