table-fixed style

--- a/source/_assets/stylesheets/_base.scss
+++ b/source/_assets/stylesheets/_base.scss
@@ -11,6 +11,11 @@ table, td {
 	border-collapse: collapse !important;
 }
 
+.layout-fixed {
+	table-layout: fixed;
+	margin: 0 auto;
+}
+
 img {
 	display: block;
 }
