--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -4,7 +4,7 @@
   {% include head.html %}
 
   <body>
-  	<table align="center" border="0" cellpadding="0" cellspacing="0" width="640" bgcolor="#f2f5f8" class="main">
+  	<table align="center" border="0" cellpadding="0" cellspacing="0" width="640" bgcolor="#f2f5f8" class="main layout-fixed">
       <!-- LOGO -->
   		<tr>
   			<td class="logo mWidth">
@@ -595,8 +595,11 @@
       <!-- END CAMPAIGN -->
       <!-- YEAH THE FOOTER IS THE END OF THIS EMAIL -->
       <tr>
-        <td class="spacing-top" align="center">
-          <table align="center" cellpadding="0" cellspacing="0" width="300">
+        <td align="center" class="spacing-top">
+        <table align="center" cellpadding="0" cellspacing="0" class="layout-fixed" width="100%">
+        <tr>
+          <td>
+            <table cellpadding="0" cellspacing="0" width="300">
             <tr>
               <td align="center" colspan="5" class="footer-title">
                 <h3>FOLLOW US</h3>
@@ -604,7 +607,7 @@
             </tr>
             <tr>
               <td align="center">
-                <table align="center" border="0" cellpadding="0" cellspacing="0">
+                <table border="0" cellpadding="0" cellspacing="0" style="float: center;">
                   <tr>
                     <td align="center" class="spacing-top spacing-right"><a href="https://www.facebook.com/ucsantacruz"><img src="https://adminlb.imodules.com/s/1069/images/editor/mobile-placeholder-images/facebook-micon.png" alt="Facebook" border="0"></a></td>
                     <td align="center" class="spacing-top spacing-left spacing-right"><a href="https://twitter.com/ucsc"><img src="https://adminlb.imodules.com/s/1069/images/editor/mobile-placeholder-images/twitter-micon.png" alt="Twitter" border="0"></a></td>
@@ -616,6 +619,9 @@
               </td>
             </tr>
           </table>
+          </td>
+        </tr>
+        </table>
         </td>
       </tr>
       <!-- YUP! FIN -->
