--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -607,7 +607,7 @@
             </tr>
             <tr>
               <td align="center">
-                <table border="0" cellpadding="0" cellspacing="0" style="float: center;">
+                <table align="center" border="0" cellpadding="0" cellspacing="0">
                   <tr>
                     <td align="center" class="spacing-top spacing-right"><a href="https://www.facebook.com/ucsantacruz"><img src="https://adminlb.imodules.com/s/1069/images/editor/mobile-placeholder-images/facebook-micon.png" alt="Facebook" border="0"></a></td>
                     <td align="center" class="spacing-top spacing-left spacing-right"><a href="https://twitter.com/ucsc"><img src="https://adminlb.imodules.com/s/1069/images/editor/mobile-placeholder-images/twitter-micon.png" alt="Twitter" border="0"></a></td>
