--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -598,7 +598,7 @@
         <td align="center" class="spacing-top">
         <table align="center" cellpadding="0" cellspacing="0" class="layout-fixed" width="100%">
         <tr>
-          <td>
+          <td align="center">
             <table cellpadding="0" cellspacing="0" width="300">
             <tr>
               <td align="center" colspan="5" class="footer-title">
