right-column padding left and right removed top and bottom

--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -4,7 +4,7 @@
   {% include head.html %}
 
   <body>
-  	<table align="center" border="0" cellpadding="0" cellspacing="0" width="640" bgcolor="#f2f5f8" class="main layout-fixed">
+  	<table align="center" border="0" cellpadding="0" cellspacing="0" width="640" bgcolor="#f2f5f8" class="main">
       <!-- LOGO -->
   		<tr>
   			<td class="logo mWidth">
@@ -301,11 +301,11 @@
         </table>
         <!-- END LEFT COLUMN -->
         <!-- RIGHT COLUMN -->
-        <table align="right" border="0" cellpadding="0" cellspacing="0" width="225" class="right-column mWidth">
+        <table align="right" border="0" cellpadding="0" cellspacing="0" width="225" class="mWidth right-column" valign="top">
           <tbody>
             <!-- Featured events -->
             <tr>
-              <td class="spacing-top right-title right-column mWidth">
+              <td class="mWidth spacing-top right-title right-column">
                 <h3>FEATURED EVENT</h3>
               </td>
             </tr>
@@ -316,12 +316,12 @@
               </td>
             </tr>
             <tr>
-              <td class="spacing-top-bottom right-column mWidth">
+              <td class="mWidth spacing-top-bottom right-column">
                 <strong>Date:</strong> dd/mm/yyyy
               </td>
             </tr>
             <tr>
-              <td class="right-column mWidth">
+              <td class="mWidth right-column">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel.</p>
                 <table border="0" cellspacing="0" cellpadding="0" width="100%" class="mWidth">
                   <tr>
@@ -336,60 +336,60 @@
 
             <!-- Campus events -->
             <tr>
-              <td class="spacing-top right-title right-column mWidth">
+              <td class="mWidth spacing-top right-title right-column">
                 <h3>Campus Events</h3>
               </td>
             </tr>
             <tr>
-              <td class="right-column mWidth">
+              <td class="mWidth right-column">
                 <p class="event-title"><a href="#">Neque porro quisquam est qui dolorem ipsum quia</a></p>
               </td>
             </tr>
             <tr>
-              <td class="spacing-top-bottom right-column mWidth">
+              <td class="mWidth spacing-top-bottom right-column">
                 <strong>Date:</strong> dd/mm/yyyy
               </td>
             </tr>
             <tr>
-              <td class="spacing-bottom right-column mWidth">
+              <td class="mWidth spacing-bottom right-column">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
               </td>
             </tr>
             <tr>
-              <td class="right-column mWidth">
+              <td class="mWidth right-column">
                 <p class="event-title"><a href="#">Neque porro quisquam est qui dolorem ipsum quia</a></p>
               </td>
             </tr>
             <tr>
-              <td class="spacing-top-bottom right-column mWidth">
+              <td class="mWidth spacing-top-bottom right-column">
                 <strong>Date:</strong> dd/mm/yyyy
               </td>
             </tr>
             <tr>
-              <td class="spacing-bottom right-column mWidth">
+              <td class="mWidth spacing-bottom right-column">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
               </td>
             </tr>
             <tr>
-              <td class="right-column mWidth">
+              <td class="mWidth right-column">
                 <p class="event-title"><a href="#">Neque porro quisquam est qui dolorem ipsum quia</a></p>
               </td>
             </tr>
             <tr>
-              <td class="spacing-top-bottom right-column mWidth">
+              <td class="mWidth spacing-top-bottom right-column">
                 <strong>Date:</strong> dd/mm/yyyy
               </td>
             </tr>
             <tr>
-              <td class="spacing-bottom right-column mWidth">
+              <td class="mWidth spacing-bottom right-column">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
               </td>
             </tr>
             <tr>
-              <td class="right-column mWidth">
+              <td class="mWidth right-column">
                 <table border="0" cellspacing="0" cellpadding="0" width="100%" class="mWidth">
                   <tr>
-                    <td class="separator mWidth">
+                    <td class="mWidth separator">
                       <a href="http://events.ucsc.edu">» Campus Events Calendar</a>
                     </td>
                   </tr>
@@ -399,19 +399,19 @@
             <!-- End Campus events -->
             <!-- Text and photo -->
             <tr>
-              <td class="spacing-top right-title right-column mWidth">
+              <td class="mWidth spacing-top right-title right-column">
                 <h3>Section Title</h3>
               </td>
             </tr>
             <tr>
-              <td class="spacing-top right-column mWidth">
+              <td class="mWidth spacing-top right-column">
                 <img src="http://placehold.it/75x75" align="right" width="75" height="75" alt="Placeholder image" class="spacing-top mFullImage">
                 <p class="event-title"><a href="#">Neque porro quisquam est qui dolorem ipsum quia</a></p>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
               </td>
             </tr>
             <tr>
-              <td class="right-column mWidth">
+              <td class="mWidth right-column">
                 <table border="0" cellspacing="0" cellpadding="0" width="100%" class="mWidth">
                   <tr>
                     <td class="separator mWidth">
@@ -421,7 +421,7 @@
               </td>
             </tr>
             <tr>
-              <td class="spacing-top right-column mWidth">
+              <td class="mWidth spacing-top right-column">
                 <img src="http://placehold.it/75x75" align="right" width="75" height="75" alt="Placeholder image" class="spacing-top mFullImage">
                 <p class="event-title"><a href="#">Neque porro quisquam est qui dolorem ipsum quia</a></p>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
@@ -430,22 +430,22 @@
             <!-- End text and photo -->
             <!-- Photo only -->
             <tr>
-              <td class="right-column mWidth">
+              <td class="mWidth right-column">
                 <table border="0" cellspacing="0" cellpadding="0" width="100%" class="mWidth">
                   <tr>
-                    <td class="separator mWidth">
+                    <td class="mWidth separator">
                     </td>
                   </tr>
                 </table>
               </td>
             </tr>
              <tr>
-              <td class="spacing-top right-title right-column mWidth">
+              <td class="mWidth spacing-top right-title right-column">
                 <h3>Section Title</h3>
               </td>
             </tr>
             <tr>
-              <td class="right-column mWidth">
+              <td class="mWidth right-column">
                 <img src="http://placehold.it/215x75" width="215" height="75" alt="Placeholder image" class="mFullImage">
               </td>
             </tr>
