--- a/source/_assets/stylesheets/_layout.scss
+++ b/source/_assets/stylesheets/_layout.scss
@@ -16,6 +16,7 @@
 
 .section-content {
 	color: $dark-gray;
+	font-family: $font-sans;
 	padding-left: 15px;
 	padding-right: 15px;
 }
@@ -39,7 +40,8 @@
 }
 
 .section-content .right-column {
-	padding: 5px;
+	padding-right: 5px;
+	padding-left: 5px;
 }
 
 .section-content .right-column .event-title {
