--- a/source/_assets/stylesheets/_layout.scss
+++ b/source/_assets/stylesheets/_layout.scss
@@ -36,7 +36,7 @@
 
 .section-content .left-column {
 	//border-right: 1px solid $brand-gold;
-	padding-right: 0;
+	padding-right: 10px;
 }
 
 .section-content .right-column {
