--- a/source/_includes/head.html
+++ b/source/_includes/head.html
@@ -8,24 +8,7 @@
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
 
   
-  <link rel="stylesheet" type="text/css" media="screen" href="{% asset_path main.css %}" />
-
-
-  <style type="text/css" rel="stylesheet">
-    @media only screen and (max-device-width: 599px) {
-     /* Images */ 
-     .mFullImage { 
-      width:100%!important; 
-      height:auto!important; 
-     }
-     /* TD or table */ 
-     .mWidth { 
-      width:100%!important; 
-      font-size: 16px !important;
-     }
-
-    }
-  </style>
+  <!--<link rel="stylesheet" type="text/css" media="screen" href="{% asset_path main.css %}" />-->
   
   <link rel="stylesheet" type="text/css" media="screen" href="http://luckyluke007.github.io/ucsc-email-templates/build/assets/main.css" />
  
