--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -87,12 +87,12 @@
       <!-- END ALSO FEATURED -->
       <!-- FULL WIDTH -->
       <tr>
-        <td class="section-title">
+        <td class="section-title mWidth">
           <h2>FULL WIDTH</h2>
         </td>
       </tr>
       <tr>
-        <td class="section-content">
+        <td class="section-content mWidth">
         <img src="http://placehold.it/610x250" width="610" height="250" alt="Placeholder image" class="mFullImage">
         </td>
       </tr>
