make all the modules include files

--- a/source/_includes/head.html
+++ b/source/_includes/head.html
@@ -9,6 +9,8 @@
 
   
   <!--<link rel="stylesheet" type="text/css" media="screen" href="{% asset_path main.css %}" />-->
+
+  {% include responsive-css.html %}
   
   <link rel="stylesheet" type="text/css" media="screen" href="http://luckyluke007.github.io/ucsc-email-templates/build/assets/main.css" />
  
