--- a/source/_includes/mods/mod-50-50.html
+++ b/source/_includes/mods/mod-50-50.html
@@ -8,7 +8,7 @@
   <table align="left" border="0" cellspacing="0" cellpadding="0" width="250" class="mWidth">
     <tr>
       <td class="mWidth">
-        <img src="http://placehold.it/250x185" align="left" width="250" height="185" alt="Placeholder image" class="float-left mFullImage">
+        <img src="http://placehold.it/250x185" align="left" width="250" height="185" alt="Placeholder image" class="mFullImage">
       </td>
     </tr>
   </table>
