--- a/source/_includes/mods/mod-two-columns.html
+++ b/source/_includes/mods/mod-two-columns.html
@@ -83,7 +83,7 @@
   </table>
   <!-- END LEFT COLUMN -->
   <!-- RIGHT COLUMN -->
-  <table align="right" border="0" cellpadding="0" cellspacing="0" width="225" class="mWidth right-column" valign="top">
+  <table align="right" border="0" cellpadding="0" cellspacing="0" width="225" class="mWidth" valign="top">
     <tbody>
       <!-- Featured events -->
       <tr>
