--- a/source/_assets/stylesheets/_base.scss
+++ b/source/_assets/stylesheets/_base.scss
@@ -57,6 +57,10 @@ a:hover {
 	padding-right: 10px;
 }
 
+.spacing-right-column {
+	padding: 10px 0 5px 5px;
+}
+
 .large-spacing-right {
 	padding-right: 15px;
 }
