--- a/source/_includes/mods/mod-two-columns.html
+++ b/source/_includes/mods/mod-two-columns.html
@@ -4,13 +4,13 @@
   </td>
 </tr>
 <tr>
-  <td class="section-content mWidth">
+  <td class="section-content mWidth" valign="top">
   <!-- LEFT COLUMN -->
-  <table align="left" border="0" cellpadding="0" cellspacing="0" width="375" class="mWidth">
+  <table align="left" border="0" cellpadding="0" cellspacing="0" width="370" class="mWidth">
     <tbody>
       <tr>
         <td class="left-column mWidth">
-          <img src="http://placehold.it/375x200" width="375" height="200" alt="Placeholder image" class="mFullImage">
+          <img src="http://placehold.it/370x200" width="370" height="200" alt="Placeholder image" class="mFullImage">
         </td>
       </tr>
        <tr>
@@ -30,7 +30,7 @@
       </tr>
        <tr>
         <td class="left-column mWidth">
-          <img src="http://placehold.it/375x200" width="375" height="200" alt="Placeholder image" class="mFullImage">
+          <img src="http://placehold.it/370x200" width="370" height="200" alt="Placeholder image" class="mFullImage">
         </td>
       </tr>
       <tr>
@@ -45,7 +45,7 @@
        </tr>
        <tr>
          <td class="left-column spacing-top border-top mWidth">
-           <table align="right" border="0" cellpadding="0" cellspacing="0" class="mWidth" width="375">
+           <table align="right" border="0" cellpadding="0" cellspacing="0" class="mWidth" width="370">
             <tr>
               <td width="120" valign="top">
                 <img src="http://placehold.it/120x120" width="120" height="120" alt="Placeholder image" class="mFullImage">
@@ -60,7 +60,7 @@
        </tr>
         <tr>
          <td class="left-column spacing-top border-top mWidth">
-           <table align="right" border="0" cellpadding="0" cellspacing="0" class="mWidth" width="375">
+           <table align="right" border="0" cellpadding="0" cellspacing="0" class="mWidth" width="370">
             <tr>
               <td width="120" valign="top">
                 <img src="http://placehold.it/120x120" width="120" height="120" alt="Placeholder image" class="mFullImage">
@@ -87,7 +87,7 @@
     <tbody>
       <!-- Featured events -->
       <tr>
-        <td class="mWidth spacing-top right-title right-column">
+        <td class="mWidth right-column">
           <h3>FEATURED EVENT</h3>
         </td>
       </tr>
@@ -118,7 +118,7 @@
 
       <!-- Campus events -->
       <tr>
-        <td class="mWidth spacing-top right-title right-column">
+        <td class="mWidth right-column">
           <h3>Campus Events</h3>
         </td>
       </tr>
