--- a/source/_assets/stylesheets/_layout.scss
+++ b/source/_assets/stylesheets/_layout.scss
@@ -40,8 +40,10 @@
 }
 
 .section-content .right-column {
-	padding-right: 5px;
+	padding-bottom: 5px;
 	padding-left: 5px;
+	padding-right: 0;
+	padding-top: 10px;
 }
 
 .section-content .right-column .event-title {
@@ -79,4 +81,3 @@
 .end-border {
 	border-bottom: 3px $brand-blue solid;
 }
-
