--- a/source/_includes/mods/mod-intro-story.html
+++ b/source/_includes/mods/mod-intro-story.html
@@ -1,6 +1,8 @@
 <tr>
   <td class="full-width mWidth">
     <img src="http://luckyluke007.github.io/ucsc-email-templates/build/assets/photo-640x325.jpg" alt="Banana Slug in a suit" width="640" height="325" class="mFullImage">
+    <!-- ASSET INTRO IMAGE -->
+    {% image "photo-640x325.jpg" style="display: none;" %}
   </td>
 </tr>
 <tr>
