--- a/source/_includes/mods/mod-logo.html
+++ b/source/_includes/mods/mod-logo.html
@@ -3,6 +3,8 @@
 	<td class="logo mWidth">
 			<img src="http://luckyluke007.github.io/ucsc-email-templates/build/assets/logo.png" alt="University of California, UC Santa Cruz">
       <!-- ASSET LOGO --> 
-			{% image "logo.png" style="display: none;" %}
+      <div class="none">
+			{% image "logo.png" %}
+			</div>
 	</td>
 </tr>
