--- a/source/_assets/stylesheets/main.scss
+++ b/source/_assets/stylesheets/main.scss
@@ -1,6 +1,7 @@
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import
         "variables",
+        "dev",
         "typography",
         "base",
         "layout"
