--- a/source/_includes/mods/mod-logo.html
+++ b/source/_includes/mods/mod-logo.html
@@ -2,9 +2,8 @@
 <tr>
 	<td class="logo mWidth">
 			<img src="http://luckyluke007.github.io/ucsc-email-templates/build/assets/logo.png" alt="University of California, UC Santa Cruz">
-      <!-- ASSET LOGO --> 
-      <div class="none">
+      <!-- ASSET LOGO
 			{% image "logo.png" %}
-			</div>
+			 --> 
 	</td>
 </tr>
