--- a/source/_includes/mods/mod-two-columns.html
+++ b/source/_includes/mods/mod-two-columns.html
@@ -4,9 +4,9 @@
   </td>
 </tr>
 <tr>
-  <td class="section-content mWidth" valign="top">
+  <td class="section-content block mWidth" valign="top">
   <!-- LEFT COLUMN -->
-  <table align="left" border="0" cellpadding="0" cellspacing="0" width="370" class="mWidth">
+  <table align="left" border="0" cellpadding="0" cellspacing="0" width="370" class="mWidth float-left">
     <tbody>
       <tr>
         <td class="left-column mWidth">
@@ -82,8 +82,12 @@
     </tbody>
   </table>
   <!-- END LEFT COLUMN -->
+  </td>
+  </tr>
+  <tr>
+  <td class="section-content block mWidth" valign="top">
   <!-- RIGHT COLUMN -->
-  <table align="right" border="0" cellpadding="0" cellspacing="0" width="225" class="mWidth">
+  <table align="left" border="0" cellpadding="0" cellspacing="0" width="225" class="mWidth float-right">
     <tbody>
       <!-- Featured events -->
       <tr>
