--- a/source/_assets/stylesheets/_layout.scss
+++ b/source/_assets/stylesheets/_layout.scss
@@ -14,6 +14,10 @@
 	padding: 10px 20px;
 }
 
+.caption {
+	padding: 5px 15px;
+}
+
 .section-content {
 	color: $dark-gray;
 	font-family: $font-sans;
