--- a/source/_includes/mods/full-top-image.html
+++ b/source/_includes/mods/full-top-image.html
@@ -7,7 +7,7 @@
   </td>
 </tr>
 <tr>
-  <td class="caption mWidth">
-    <p>— Caption text goes here. (Photo by a Person) —</p>  
+  <td class="caption mWidth" align="center">
+    <p class="caption-text">— Caption text goes here. (Photo by a Person) —</p>  
   </td>
 </tr>
