caption text color change

--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -45,6 +45,7 @@
       <!-- THREE COLUMNS -->
       {% include mods/mod-three-columns.html %}
       <!-- END THREE COLUMNS -->
+
       <tr>
         <td class="spacing-top mWidth">
           &nbsp;
@@ -64,6 +65,10 @@
       <!-- FULL COLUMN TEXT CENTER -->
       {% include mods/mod-full-col-text.html %}
       <!-- END FULL COLUMN TEXT CENTER -->
+
+      <!-- FULL IMAGE W/ CAPTION -->
+      {% include mods/full-top-image.html %}
+      <!-- END FULL IMAGE W/ CAPTION -->
 
       <!-- CAMPAIGN -->
       <tr>
