--- a/source/_includes/mods/mod-two-columns.html
+++ b/source/_includes/mods/mod-two-columns.html
@@ -82,7 +82,7 @@
     </tbody>
   </table>
   <!-- END LEFT COLUMN -->
-
+  <br style=""/>
   <!-- RIGHT COLUMN -->
   <table align="right" border="0" cellpadding="0" cellspacing="0" width="225" class="mWidth">
     <tbody>
