--- a/source/_includes/mods/mod-two-columns.html
+++ b/source/_includes/mods/mod-two-columns.html
@@ -6,7 +6,7 @@
 <tr>
   <td class="section-content mWidth">
   <!-- LEFT COLUMN -->
-  <table align="left" border="0" cellpadding="0" cellspacing="0" width="370" class="mWidth">
+  <table align="left" border="0" cellpadding="0" cellspacing="0" width="370" class="mWidth border-columns-fixed">
     <tbody>
       <tr>
         <td class="mWidth left-column">
@@ -73,7 +73,7 @@
          </table>
          </td>
        </tr>
-       <tr>
+       <tr style="page-break-before: always">
          <td class="mWidth spacing-top border-top left-column">
            <h3><a href="#">Neque porro quisquam est qui dolorem ipsum quia</a></h3>
            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
@@ -82,9 +82,11 @@
     </tbody>
   </table>
   <!-- END LEFT COLUMN -->
-  <br style=""/>
+  <!--[if (gte mso 9)|(IE)]>
+</td><td>
+<![endif]-->
   <!-- RIGHT COLUMN -->
-  <table align="right" border="0" cellpadding="0" cellspacing="0" width="225" class="mWidth">
+  <table align="right" border="0" cellpadding="0" cellspacing="0" width="225" class="mWidth border-columns-fixed">
     <tbody>
       <!-- Featured events -->
       <tr>
