adding ghost columns - body center

--- a/source/_includes/mods/mod-70-30.html
+++ b/source/_includes/mods/mod-70-30.html
@@ -5,6 +5,11 @@
 </tr>
 <tr>
   <td class="section-content">
+  <!--[if (gte mso 9)|(IE)]>
+      <table width="610" align="center">
+      <tr>
+      <td width="380" valign="top">
+  <![endif]-->
   <!-- 70 COLUMN -->
    <table align="left" border="0" cellpadding="0" cellspacing="0" width="380" class="mWidth">
      <tbody>
@@ -26,6 +31,10 @@
      </tbody>
    </table>
   <!-- END 70 COLUMN -->
+  <!--[if (gte mso 9)|(IE)]>
+      </td>
+      <td width="210" valign="top">
+  <![endif]-->
   <!-- 30 COLUMN -->
    <table align="right" border="0" cellpadding="0" cellspacing="0" width="210" class="mWidth">
      <tbody>
@@ -47,5 +56,10 @@
      </tbody>
    </table>
   <!-- END 30 COLUMN -->
+  <!--[if (gte mso 9)|(IE)]>
+      </td>
+      </tr>
+      </table>
+  <![endif]-->
   </td>
 </tr>
