--- a/source/_assets/stylesheets/_base.scss
+++ b/source/_assets/stylesheets/_base.scss
@@ -3,8 +3,9 @@ html {
 	color: $dark-gray;
 	font-family: $font-sans;
 	line-height: 20px;
-	margin: 10px 0;
+	margin: 10px auto;
 	padding: 0;
+	text-align: center;
 }
 
 table, td {
