--- a/source/_includes/mods/mod-three-columns.html
+++ b/source/_includes/mods/mod-three-columns.html
@@ -5,6 +5,11 @@
 </tr>
 <tr>
   <td class="section-content mWidth">
+  <!--[if (gte mso 9)|(IE)]>
+      <table width="610" align="center">
+      <tr>
+      <td width="192" valign="top">
+  <![endif]-->
     <table align="left" border="0" cellpadding="0" cellspacing="0" class="mWidth" width="192">
       <tr>
         <td class="large-spacing-right mWidth">
@@ -18,6 +23,10 @@
         </td>
       </tr>
     </table>
+    <!--[if (gte mso 9)|(IE)]>
+      </td>
+      <td width="192" valign="top">
+    <![endif]-->
      <table align="left" border="0" cellpadding="0" cellspacing="0" class="mWidth" width="192">
       <tr>
         <td class="mWidth">
@@ -31,6 +40,10 @@
         </td>
       </tr>
     </table>
+    <!--[if (gte mso 9)|(IE)]>
+      </td>
+      <td width="192" valign="top">
+    <![endif]-->
      <table align="right" border="0" cellpadding="0" cellspacing="0" class="mWidth" width="192">
       <tr>
         <td class="mWidth">
@@ -44,5 +57,10 @@
         </td>
       </tr>
     </table>
+    <!--[if (gte mso 9)|(IE)]>
+      </td>
+      </tr>
+      </table>
+    <![endif]-->
   </td>
 </tr>
