--- a/source/_includes/mods/mod-two-columns-org.html
+++ b/source/_includes/mods/mod-two-columns-org.html
@@ -5,13 +5,8 @@
 </tr>
 <tr>
   <td class="section-content mWidth">
-   <!--[if (gte mso 9)|(IE)]>
-      <table width="610" align="center">
-      <tr>
-      <td width="380" valign="top">
-    <![endif]-->
   <!-- LEFT COLUMN -->
-  <table align="left" border="0" cellpadding="0" cellspacing="0" width="370" class="mWidth">
+  <table align="left" border="0" cellpadding="0" cellspacing="0" width="370" class="mWidth border-columns-fixed">
     <tbody>
       <tr>
         <td class="mWidth left-column">
@@ -52,11 +47,10 @@
          <td class="mWidth left-column spacing-top border-top">
            <table align="right" border="0" cellpadding="0" cellspacing="0" class="mWidth" width="370">
             <tr>
-              <!-- NO MOBILE -->
-              <td width="120" valign="top">
+              <td width="120" valign="top" class="mWidth">
                 <img src="http://placehold.it/120x120" width="120" height="120" alt="Placeholder image" class="mFullImage">
               </td>
-              <td class="spacing-left" width="230">
+              <td class="spacing-left" width="230" class="mWidth">
                 <h3><a href="#">Neque porro quisquam est qui dolorem ipsum quia</a></h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
               </td>
@@ -68,10 +62,10 @@
          <td class="mWidth left-column spacing-top border-top">
            <table align="right" border="0" cellpadding="0" cellspacing="0" class="mWidth" width="370">
             <tr>
-              <td width="120" valign="top">
+              <td width="120" valign="top" class="mWidth">
                 <img src="http://placehold.it/120x120" width="120" height="120" alt="Placeholder image" class="mFullImage">
               </td>
-              <td class="spacing-left" width="230" >
+              <td class="spacing-left" width="230" class="mWidth">
                 <h3><a href="#">Neque porro quisquam est qui dolorem ipsum quia</a></h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
               </td>
@@ -89,15 +83,14 @@
   </table>
   <!-- END LEFT COLUMN -->
   <!--[if (gte mso 9)|(IE)]>
-      </td>
-      <td width="230" valign="top">
-  <![endif]-->
+</td><td>
+<![endif]-->
   <!-- RIGHT COLUMN -->
-  <table align="right" border="0" cellpadding="0" cellspacing="0" width="225" class="mWidth">
+  <table align="right" border="0" cellpadding="0" cellspacing="0" width="225" class="mWidth border-columns-fixed">
     <tbody>
       <!-- Featured events -->
       <tr>
-        <td class="mWidth right-title right-column">
+        <td class="mWidth right-column">
           <h3>FEATURED EVENT</h3>
         </td>
       </tr>
@@ -128,7 +121,7 @@
 
       <!-- Campus events -->
       <tr>
-        <td class="mWidth right-title right-column">
+        <td class="mWidth right-column">
           <h3>Campus Events</h3>
         </td>
       </tr>
@@ -245,10 +238,5 @@
     </tbody>
   </table>
   <!-- END RIGHT COLUMN -->
-   <!--[if (gte mso 9)|(IE)]>
-          </td>
-        </tr>
-      </table>
-      <![endif]-->
   </td>
 </tr>
