--- a/source/_includes/mods/mod-two-columns-vertical.html
+++ b/source/_includes/mods/mod-two-columns-vertical.html
@@ -5,6 +5,11 @@
 </tr>
 <tr>
   <td class="section-content mWidth" width="610">
+  <!--[if (gte mso 9)|(IE)]>
+      <table width="610" align="center">
+      <tr>
+      <td width="295" valign="top">
+  <![endif]-->
     <table align="left" cellpadding="0" cellspacing="0" width="295" class="mWidth">
       <tr>
         <td class="spacing-right spacing-bottom" valign="top">
@@ -16,6 +21,10 @@
         </td>
       </tr>
     </table>
+    <!--[if (gte mso 9)|(IE)]>
+      </td>
+      <td width="295">
+    <![endif]-->
     <table align="left" cellpadding="0" cellspacing="0" class="mWidth" width="295">
       <tr>
         <td class="spacing-right spacing-bottom" valign="top">
@@ -27,5 +36,10 @@
         </td>
       </tr>
     </table>
+    <!--[if (gte mso 9)|(IE)]>
+      </td>
+      </tr>
+      </table>
+    <![endif]-->
   </td>
 </tr>
