--- a/source/_includes/mods/mod-50-50.html
+++ b/source/_includes/mods/mod-50-50.html
@@ -1,10 +1,10 @@
 <tr>
-  <td class="section-title mWidth">
+  <td class="mWidth section-title align-left">
     <h2>FULL COLUMN 50/50</h2>
   </td>
 </tr>
 <tr>
-  <td class="section-content mWidth">
+  <td class="mWidth section-content">
   <table align="left" border="0" cellspacing="0" cellpadding="0" width="250" class="mWidth">
     <tr>
       <td class="mWidth">
@@ -15,7 +15,7 @@
 
   <table align="right" border="0" cellspacing="0" cellpadding="0" width="340" class="mWidth">
     <tr>
-      <td class="spacing-top mWidth">
+      <td class="mWidth spacing-top align-left">
         <h3><a href="#">Neque porro quisquam est qui dolorem ipsum quia</a></h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec placerat elit ac felis faucibus, ac ullamcorper diam semper. Cras non sapien sapien.</p>
       </td>
