--- a/source/_assets/stylesheets/_base.scss
+++ b/source/_assets/stylesheets/_base.scss
@@ -36,6 +36,12 @@ img {
 	padding: 15px;
 }
 
+.logo-blue {
+	background: $brand-blue;
+	padding: 15px;
+}
+
+
 a,
 a:active {
 	color: $brand-blue;
