adding blue logo, fixing alignment

--- a/source/_includes/mods/mod-30-70.html
+++ b/source/_includes/mods/mod-30-70.html
@@ -1,5 +1,5 @@
 <tr>
-  <td class="section-title mWidth">
+  <td class="mWidth section-title align-left">
     <h2>30/70 WIDTH</h2>
   </td>
 </tr>
@@ -19,12 +19,12 @@
          </td>
        </tr>
        <tr>
-         <td class="mWidth">
+         <td class="mWidth align-left">
            <h3><a href="#">Neque porro quisquam est qui</a></h3>
          </td>
        </tr>
        <tr>
-         <td class="mWidth">
+         <td class="mWidth align-left">
            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel.</p>
          </td>
        </tr>
@@ -44,12 +44,12 @@
          </td>
        </tr>
        <tr>
-         <td class="mWidth">
+         <td class="mWidth align-left">
            <h3><a href="#">Neque porro quisquam est qui dolorem ipsum quia </a></h3>
          </td>
        </tr>
        <tr>
-         <td class="mWidth">
+         <td class="mWidth align-left">
            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec placerat elit ac felis faucibus, ac ullamcorper diam semper. Cras non sapien sapien.</p>
          </td>
        </tr>
