--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -9,6 +9,10 @@
       <!-- LOGO -->
       {% include mods/mod-logo.html %}
       <!-- END LOGO -->
+
+      <!-- LOGO -->
+      {% include mods/mod-logo-blue.html %}
+      <!-- END LOGO -->
       
       <!-- EMAIL TITLE -->
       {% include mods/mod-email-title.html %}
