--- a/source/_includes/mods/mod-full-col-text.html
+++ b/source/_includes/mods/mod-full-col-text.html
@@ -1,5 +1,5 @@
 <tr>
-  <td align="center" class="spacing-top spacing-bottom mWidth">
+  <td align="center" class="mWidth spacing-top spacing-bottom">
     <h3><a href="#">Neque porro quisquam est qui dolorem ipsum quia</a></h3>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel.</p>
   </td>
