--- a/source/_includes/mods/mod-full-width.html
+++ b/source/_includes/mods/mod-full-width.html
@@ -1,20 +1,20 @@
 <tr>
-  <td class="section-title mWidth">
+  <td align="left" class="mWidth section-title align-left">
     <h2>FULL WIDTH</h2>
   </td>
 </tr>
 <tr>
-  <td class="section-content mWidth">
+  <td class="mWidth section-content">
   <img src="http://placehold.it/610x250" width="610" height="250" alt="Placeholder image" class="mFullImage">
   </td>
 </tr>
 <tr>
-  <td class="section-content mWidth">
+  <td align="left" class="mWidth section-content align-left">
     <h3><a href="#">Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit</a></h3>
   </td>
 </tr>
  <tr>
-  <td class="section-content mWidth">
+  <td align="left" class="mWidth section-content align-left">
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec placerat elit ac felis faucibus, ac ullamcorper diam semper. Cras non sapien sapien.</p>  
   </td>
 </tr>
