--- a/source/_includes/mods/mod-three-columns.html
+++ b/source/_includes/mods/mod-three-columns.html
@@ -8,16 +8,16 @@
   <!--[if (gte mso 9)|(IE)]>
       <table width="610" align="center">
       <tr>
-      <td width="192" valign="top">
+      <td width="193" valign="top">
   <![endif]-->
-    <table align="left" border="0" cellpadding="0" cellspacing="0" class="mWidth" width="192">
+    <table align="left" border="0" cellpadding="0" cellspacing="0" class="mWidth" width="193">
       <tr>
         <td class="large-spacing-right mWidth">
-          <img src="http://placehold.it/192x192" align="left" width="192" height="192" alt="Placeholder image" class="mFullImage">
+          <img src="http://placehold.it/193x193" align="left" width="193" height="193" alt="Placeholder image" class="mFullImage">
         </td>
       </tr>
       <tr>
-        <td class="large-spacing-right mWidth">
+        <td align="left" class="mWidth large-spacing-right align-left">
           <h3><a href="#">Neque porro quisquam est qui dolorem ipsum quia</a></h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec placerat elit ac felis faucibus, ac ullamcorper diam semper. Cras non sapien sapien.</p>
         </td>
@@ -25,16 +25,16 @@
     </table>
     <!--[if (gte mso 9)|(IE)]>
       </td>
-      <td width="192" valign="top">
+      <td width="193" valign="top">
     <![endif]-->
-     <table align="left" border="0" cellpadding="0" cellspacing="0" class="mWidth" width="192">
+     <table align="left" border="0" cellpadding="0" cellspacing="0" class="mWidth" width="193">
       <tr>
         <td class="mWidth">
-          <img src="http://placehold.it/192x192" align="left" width="192" height="192" alt="Placeholder image" class="mFullImage">
+          <img src="http://placehold.it/193x193" align="left" width="193" height="193" alt="Placeholder image" class="mFullImage">
         </td>
       </tr>
       <tr>
-        <td class="spacing-right mWidth">
+        <td align="left" class="mWidth spacing-right align-left">
           <h3><a href="#">Neque porro quisquam est qui dolorem ipsum quia</a></h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec placerat elit ac felis faucibus, ac ullamcorper diam semper. Cras non sapien sapien.</p>
         </td>
@@ -42,16 +42,16 @@
     </table>
     <!--[if (gte mso 9)|(IE)]>
       </td>
-      <td width="192" valign="top">
+      <td width="193" valign="top">
     <![endif]-->
-     <table align="right" border="0" cellpadding="0" cellspacing="0" class="mWidth" width="192">
+     <table align="right" border="0" cellpadding="0" cellspacing="0" class="mWidth" width="193">
       <tr>
         <td class="mWidth">
-          <img src="http://placehold.it/192x192" align="left" width="192" height="192" alt="Placeholder image" class="mFullImage">
+          <img src="http://placehold.it/193x193" align="left" width="193" height="193" alt="Placeholder image" class="mFullImage">
         </td>
       </tr>
       <tr>
-        <td class="mWidth">
+        <td align="left" class="mWidth align-left">
           <h3><a href="#">Neque porro quisquam est qui dolorem ipsum quia</a></h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec placerat elit ac felis faucibus, ac ullamcorper diam semper. Cras non sapien sapien.</p>
         </td>
