--- a/source/_includes/mods/mod-two-columns-vertical.html
+++ b/source/_includes/mods/mod-two-columns-vertical.html
@@ -1,5 +1,5 @@
 <tr>
-  <td class="section-title mWidth">
+  <td align="left" class="mWidth section-title align-left">
     <h2>Vertical 50/50 COLUMNS</h2>
   </td>
 </tr>
@@ -15,7 +15,7 @@
         <td class="spacing-right spacing-bottom" valign="top">
           <img src="http://placehold.it/95x140" align="left" width="95" height="140" alt="Placeholder image">
         </td>
-        <td valign="top" class="large-spacing-right">
+        <td align="left" valign="top" class="large-spacing-right align-left">
           <h3><a href="#">Neque porro quisquam est qui dolorem ipsum quia</a></h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel. </p>
         </td>
@@ -30,7 +30,7 @@
         <td class="spacing-right spacing-bottom" valign="top">
           <img src="http://placehold.it/95x140" align="left" width="95" height="140" alt="Placeholder image">
         </td>
-        <td valign="top">
+        <td align="left" valign="top align-left">
           <h3><a href="#">Neque porro quisquam est qui dolorem ipsum quia</a></h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel.</p>
         </td>
